--- a/LayerGraphicsDrawing/en.lproj/MainMenu.xib
+++ b/LayerGraphicsDrawing/en.lproj/MainMenu.xib
@@ -3,12 +3,12 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1070</int>
 		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2843</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2844</string>
 		<string key="IBDocument.AppKitVersion">1138.47</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">2843</string>
+			<string key="NS.object.0">2844</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBNSLayoutConstraint</string>
@@ -1305,7 +1305,7 @@
 				<nil key="NSViewClass"/>
 				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="439893737">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSButton" id="726612376">
@@ -1313,7 +1313,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{14, 363}, {82, 32}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="376007093"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -1341,7 +1340,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{14, 291}, {82, 32}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="515093711"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -1373,7 +1371,6 @@
 							</set>
 							<string key="NSFrame">{{113, 234}, {160, 160}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="942396373"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -1401,8 +1398,6 @@
 							</set>
 							<string key="NSFrame">{{113, 53}, {160, 160}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSImageCell" key="NSCell" id="196827716">
@@ -1421,15 +1416,12 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{291, 172}, {338, 219}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="885978853"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<string key="NSClassName">OTLayerDrawing</string>
 						</object>
 					</array>
 					<string key="NSFrameSize">{684, 411}</string>
-					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="726612376"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
@@ -1437,7 +1429,7 @@
 				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
 			<object class="NSCustomObject" id="976324537">
-				<string key="NSClassName">AppDelegate</string>
+				<string key="NSClassName">AppDelegateLayerGraphicsDrawing</string>
 			</object>
 			<object class="NSCustomObject" id="755631768">
 				<string key="NSClassName">NSFontManager</string>
@@ -3831,237 +3823,6 @@
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
-					<string key="className">AppDelegate</string>
-					<string key="superclassName">NSObject</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="LayerAction:">id</string>
-						<string key="changeBackgroundColor:">id</string>
-						<string key="changeHistogram:">id</string>
-						<string key="changeSliderValue:">id</string>
-						<string key="directionSet:">id</string>
-						<string key="drawHistogram:">id</string>
-						<string key="goTick:">id</string>
-						<string key="graphSet:">id</string>
-						<string key="layerActor:">id</string>
-						<string key="openImage:">id</string>
-						<string key="openImageFrom:">id</string>
-						<string key="opendlgImage:">id</string>
-						<string key="originSet:">id</string>
-						<string key="presetOne:">id</string>
-						<string key="presetThree:">id</string>
-						<string key="presetTwo:">id</string>
-						<string key="rulerSet:">id</string>
-						<string key="saveImageTo:">id</string>
-						<string key="speedSet:">id</string>
-						<string key="timerTickGo:">id</string>
-						<string key="valueSet:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="LayerAction:">
-							<string key="name">LayerAction:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="changeBackgroundColor:">
-							<string key="name">changeBackgroundColor:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="changeHistogram:">
-							<string key="name">changeHistogram:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="changeSliderValue:">
-							<string key="name">changeSliderValue:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="directionSet:">
-							<string key="name">directionSet:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="drawHistogram:">
-							<string key="name">drawHistogram:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="goTick:">
-							<string key="name">goTick:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="graphSet:">
-							<string key="name">graphSet:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="layerActor:">
-							<string key="name">layerActor:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="openImage:">
-							<string key="name">openImage:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="openImageFrom:">
-							<string key="name">openImageFrom:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="opendlgImage:">
-							<string key="name">opendlgImage:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="originSet:">
-							<string key="name">originSet:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="presetOne:">
-							<string key="name">presetOne:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="presetThree:">
-							<string key="name">presetThree:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="presetTwo:">
-							<string key="name">presetTwo:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="rulerSet:">
-							<string key="name">rulerSet:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="saveImageTo:">
-							<string key="name">saveImageTo:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="speedSet:">
-							<string key="name">speedSet:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="timerTickGo:">
-							<string key="name">timerTickGo:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="valueSet:">
-							<string key="name">valueSet:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="destionImage">NSImageView</string>
-						<string key="directionMatrix">NSMatrix</string>
-						<string key="dstImage">NSImageView</string>
-						<string key="graphicMatrix">NSMatrix</string>
-						<string key="modePopUpButton">NSPopUpButton</string>
-						<string key="movePopUpButton">NSPopUpButton</string>
-						<string key="oriImage">NSImageView</string>
-						<string key="originImage">NSImageView</string>
-						<string key="originMatrix">NSMatrix</string>
-						<string key="pieView">OTPieView</string>
-						<string key="popUpButton">NSPopUpButton</string>
-						<string key="presetButtonOne">NSButton</string>
-						<string key="presetButtonThree">NSButton</string>
-						<string key="presetButtonTwo">NSButton</string>
-						<string key="rulerTextField">NSTextField</string>
-						<string key="sourceImage">NSImageView</string>
-						<string key="speedSlider">NSSlider</string>
-						<string key="tableview">NSTableView</string>
-						<string key="targetImage">NSImageView</string>
-						<string key="tmpImage">NSImageView</string>
-						<string key="tokenField">NSTokenField</string>
-						<string key="window">NSWindow</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="destionImage">
-							<string key="name">destionImage</string>
-							<string key="candidateClassName">NSImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="directionMatrix">
-							<string key="name">directionMatrix</string>
-							<string key="candidateClassName">NSMatrix</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="dstImage">
-							<string key="name">dstImage</string>
-							<string key="candidateClassName">NSImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="graphicMatrix">
-							<string key="name">graphicMatrix</string>
-							<string key="candidateClassName">NSMatrix</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="modePopUpButton">
-							<string key="name">modePopUpButton</string>
-							<string key="candidateClassName">NSPopUpButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="movePopUpButton">
-							<string key="name">movePopUpButton</string>
-							<string key="candidateClassName">NSPopUpButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="oriImage">
-							<string key="name">oriImage</string>
-							<string key="candidateClassName">NSImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="originImage">
-							<string key="name">originImage</string>
-							<string key="candidateClassName">NSImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="originMatrix">
-							<string key="name">originMatrix</string>
-							<string key="candidateClassName">NSMatrix</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="pieView">
-							<string key="name">pieView</string>
-							<string key="candidateClassName">OTPieView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popUpButton">
-							<string key="name">popUpButton</string>
-							<string key="candidateClassName">NSPopUpButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="presetButtonOne">
-							<string key="name">presetButtonOne</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="presetButtonThree">
-							<string key="name">presetButtonThree</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="presetButtonTwo">
-							<string key="name">presetButtonTwo</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="rulerTextField">
-							<string key="name">rulerTextField</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="sourceImage">
-							<string key="name">sourceImage</string>
-							<string key="candidateClassName">NSImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="speedSlider">
-							<string key="name">speedSlider</string>
-							<string key="candidateClassName">NSSlider</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tableview">
-							<string key="name">tableview</string>
-							<string key="candidateClassName">NSTableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="targetImage">
-							<string key="name">targetImage</string>
-							<string key="candidateClassName">NSImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tmpImage">
-							<string key="name">tmpImage</string>
-							<string key="candidateClassName">NSImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tokenField">
-							<string key="name">tokenField</string>
-							<string key="candidateClassName">NSTokenField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="window">
-							<string key="name">window</string>
-							<string key="candidateClassName">NSWindow</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/AppDelegate.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
 					<string key="className">NSLayoutConstraint</string>
 					<string key="superclassName">NSObject</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -4093,14 +3854,6 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/OTLayerDrawing.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">OTPieView</string>
-					<string key="superclassName">NSView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/OTPieView.h</string>
 					</object>
 				</object>
 			</array>
